syntax = "proto3";

package delivery.v1;

import "google/protobuf/timestamp.proto";

option go_package = "backend/pkg/grpc/delivery/v1;deliveryv1";

// DeliveryService provides delivery operations
service DeliveryService {
  // CreateShipment creates a new shipment
  rpc CreateShipment(CreateShipmentRequest) returns (CreateShipmentResponse);

  // GetShipment retrieves shipment information
  rpc GetShipment(GetShipmentRequest) returns (GetShipmentResponse);

  // TrackShipment tracks shipment status
  rpc TrackShipment(TrackShipmentRequest) returns (TrackShipmentResponse);

  // CancelShipment cancels a shipment
  rpc CancelShipment(CancelShipmentRequest) returns (CancelShipmentResponse);

  // CalculateRate calculates delivery cost
  rpc CalculateRate(CalculateRateRequest) returns (CalculateRateResponse);

  // GetSettlements returns list of available settlements/cities
  rpc GetSettlements(GetSettlementsRequest) returns (GetSettlementsResponse);

  // GetStreets returns list of streets for a settlement
  rpc GetStreets(GetStreetsRequest) returns (GetStreetsResponse);

  // GetParcelLockers returns list of available parcel lockers
  rpc GetParcelLockers(GetParcelLockersRequest) returns (GetParcelLockersResponse);
}

// Shipment status enumeration
enum ShipmentStatus {
  SHIPMENT_STATUS_UNSPECIFIED = 0;
  SHIPMENT_STATUS_PENDING = 1;
  SHIPMENT_STATUS_CONFIRMED = 2;
  SHIPMENT_STATUS_IN_TRANSIT = 3;
  SHIPMENT_STATUS_OUT_FOR_DELIVERY = 4;
  SHIPMENT_STATUS_DELIVERED = 5;
  SHIPMENT_STATUS_FAILED = 6;
  SHIPMENT_STATUS_CANCELLED = 7;
  SHIPMENT_STATUS_RETURNED = 8;
}

// Delivery provider enumeration
enum DeliveryProvider {
  DELIVERY_PROVIDER_UNSPECIFIED = 0;
  DELIVERY_PROVIDER_POST_EXPRESS = 1;  // post_express (Post Express)
  DELIVERY_PROVIDER_BEX_EXPRESS = 2;   // bex_express (BEX Express)
  DELIVERY_PROVIDER_AKS_EXPRESS = 3;   // aks_express (AKS Express)
  DELIVERY_PROVIDER_D_EXPRESS = 4;     // d_express (D Express)
  DELIVERY_PROVIDER_CITY_EXPRESS = 5;  // city_express (City Express)
}

// Address message
message Address {
  string street = 1;
  string city = 2;
  string state = 3;
  string postal_code = 4;
  string country = 5;
  string contact_name = 6;
  string contact_phone = 7;
}

// Package information
message Package {
  string weight = 1; // Weight in kg
  string length = 2; // Length in cm
  string width = 3; // Width in cm
  string height = 4; // Height in cm
  string description = 5;
  string declared_value = 6; // Value in currency
}

// Shipment message
message Shipment {
  string id = 1; // UUID as string
  string tracking_number = 2;
  DeliveryProvider provider = 3;
  ShipmentStatus status = 4;
  Address from_address = 5;
  Address to_address = 6;
  Package package = 7;
  string cost = 8; // Cost in currency
  string currency = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
  google.protobuf.Timestamp estimated_delivery = 12;
  google.protobuf.Timestamp actual_delivery = 13;
}

// CreateShipment messages
message CreateShipmentRequest {
  DeliveryProvider provider = 1;
  Address from_address = 2;
  Address to_address = 3;
  Package package = 4;
  string user_id = 5; // UUID as string
}

message CreateShipmentResponse {
  Shipment shipment = 1;
}

// GetShipment messages
message GetShipmentRequest {
  string id = 1; // UUID as string
}

message GetShipmentResponse {
  Shipment shipment = 1;
}

// TrackShipment messages
message TrackShipmentRequest {
  string tracking_number = 1;
}

message TrackShipmentResponse {
  Shipment shipment = 1;
  repeated TrackingEvent events = 2;
}

message TrackingEvent {
  ShipmentStatus status = 1;
  string location = 2;
  string description = 3;
  google.protobuf.Timestamp timestamp = 4;
}

// CancelShipment messages
message CancelShipmentRequest {
  string id = 1; // UUID as string
  string reason = 2;
}

message CancelShipmentResponse {
  Shipment shipment = 1;
}

// CalculateRate messages
message CalculateRateRequest {
  DeliveryProvider provider = 1;
  Address from_address = 2;
  Address to_address = 3;
  Package package = 4;
}

message CalculateRateResponse {
  string cost = 1; // Cost in currency
  string currency = 2;
  google.protobuf.Timestamp estimated_delivery = 3;
}

// Settlement/City information
message Settlement {
  int32 id = 1;
  string name = 2;
  string zip_code = 3;
  string country = 4;
}

// GetSettlements messages
message GetSettlementsRequest {
  DeliveryProvider provider = 1;
  string country = 2; // Optional filter by country (e.g., "RS")
  string search_query = 3; // Optional search by name
}

message GetSettlementsResponse {
  repeated Settlement settlements = 1;
}

// Street information
message Street {
  int32 id = 1;
  string name = 2;
  string settlement_name = 3;
}

// GetStreets messages
message GetStreetsRequest {
  DeliveryProvider provider = 1;
  string settlement_name = 2; // Required: settlement name
  string search_query = 3; // Optional search by street name
}

message GetStreetsResponse {
  repeated Street streets = 1;
}

// Parcel locker information
message ParcelLocker {
  int32 id = 1;
  string code = 2; // Locker code (e.g., "BG001")
  string name = 3;
  string address = 4;
  string city = 5;
  string zip_code = 6;
  double latitude = 7;
  double longitude = 8;
  bool available = 9;
}

// GetParcelLockers messages
message GetParcelLockersRequest {
  DeliveryProvider provider = 1;
  string city = 2; // Optional filter by city
  string search_query = 3; // Optional search by name/code
}

message GetParcelLockersResponse {
  repeated ParcelLocker parcel_lockers = 1;
}
